# ssee-metrics

./: CONTRIBUTING.md  README.md  pyproject.toml
ssee_metrics/: precision.py  recall.py  semantic_utils.py
tests/: test_precision.py  test_recall.py
