[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssee_metrics"
version = "1.0.0"
description='A collection of metrics called Structured Semantic Entity Evaluation (SSEE) for comparing sets or lists of strings.'
readme = "README.md"
authors = [
    { name = "Karol Lynch", email = "karol_lynch@ie.ibm.com" }
]
dependencies = [
    # List your project dependencies here, e.g.,
    "sentence_transformers",
]
requires-python = ">=3.7"

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
[tool.setuptools]
packages = ["ssee_metrics"]

[project.urls]
"Homepage" = "https://github.com/IBM/ssee-metrics"
"Bug Tracker" = "https://github.com/IBM/ssee-metrics/issues"